--- a/style.css
+++ b/style.css
@@ -38,7 +38,17 @@ nav a:hover {
 footer {
   text-align: center;
   color: #828282;
+  background-color: #f5f5f5;
   padding: 2em;
+  font-size: 0.9em;
+  border-top: 1px solid #e0e0e0;
+}
+footer a {
+  color: #2a7ae2;
+  text-decoration: none;
+}
+footer a:hover {
+  text-decoration: underline;
 }
 
 blockquote {
