--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
   margin: 0;
   background-color: #ffffff;
   color: #333333;
-  display: flex;
-  flex-direction: column;
 }
 
 nav {
@@ -31,90 +29,11 @@ nav a:hover {
   text-decoration: underline;
 }
 
-.main-content {
-  display: flex;
-  max-width: 1200px;
-  margin: auto;
-  padding: 2em;
-}
-
-.sidebar-timeline {
-  width: 250px;
-  background-color: #f5f5f5;
-  padding: 1em;
-  margin-right: 2em;
-  border-right: 1px solid #e0e0e0;
-  position: sticky;
-  top: 80px;
-  height: fit-content;
-}
-
-.sidebar-timeline h3 {
-  margin-top: 0;
-}
-
-.sidebar-timeline ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar-timeline li {
-  margin-bottom: 1em;
-}
-
-.sidebar-timeline a {
-  text-decoration: none;
-  color: #333333;
-}
-
-.sidebar-timeline a:hover {
-  color: #2a7ae2;
-}
-
-.content-area {
-  flex-grow: 1;
-}
-
-footer {
-  text-align: center;
-  color: #828282;
-  background-color: #f5f5f5;
-  padding: 2em;
-  font-size: 0.9em;
-  border-top: 1px solid #e0e0e0;
-}
-
-footer a {
-  color: #2a7ae2;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-iframe {
-  width: 100%;
-  height: 600px;
-  border: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  margin: 1em 0;
-}
-
-.project-section {
-  margin-bottom: 3em;
-}
-
 .project-wrapper {
   display: flex;
-  max-width: 1200px;
-  margin: auto;
-  padding: 2em;
+  max-width: 1100px;
+  margin: 2em auto;
+  padding: 0 2em;
 }
 
 .timeline-sidebar {
@@ -176,3 +95,32 @@ img {
   margin-bottom: 3em;
 }
 
+footer {
+  text-align: center;
+  color: #828282;
+  background-color: #f5f5f5;
+  padding: 2em;
+  font-size: 0.9em;
+  border-top: 1px solid #e0e0e0;
+}
+
+footer a {
+  color: #2a7ae2;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+iframe {
+  width: 100%;
+  height: 600px;
+  border: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin: 1em 0;
+}
