--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   background-color: #ffffff;
   color: #333333;
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
@@ -29,70 +31,49 @@ nav a:hover {
   text-decoration: underline;
 }
 
-.project-wrapper {
+.main-content {
   display: flex;
-  max-width: 1100px;
-  margin: 2em auto;
-  padding: 0 2em;
+  max-width: 1200px;
+  margin: auto;
+  padding: 2em;
 }
 
-.timeline-sidebar {
-  width: 160px;
+.sidebar-timeline {
+  width: 250px;
+  background-color: #f5f5f5;
+  padding: 1em;
+  margin-right: 2em;
+  border-right: 1px solid #e0e0e0;
   position: sticky;
-  top: 100px;
-  padding-right: 20px;
+  top: 80px;
+  height: fit-content;
 }
 
-.timeline-sidebar ul {
-  list-style: none;
+.sidebar-timeline h3 {
+  margin-top: 0;
+}
+
+.sidebar-timeline ul {
+  list-style-type: none;
   padding: 0;
   margin: 0;
-  position: relative;
 }
 
-.timeline-sidebar ul::before {
-  content: '';
-  position: absolute;
-  left: 16px;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background: #e0e0e0;
+.sidebar-timeline li {
+  margin-bottom: 1em;
 }
 
-.timeline-sidebar li {
-  position: relative;
-  margin-bottom: 40px;
-  padding-left: 40px;
-}
-
-.timeline-sidebar .dot {
-  width: 12px;
-  height: 12px;
-  background-color: #2a7ae2;
-  border-radius: 50%;
-  position: absolute;
-  left: 10px;
-  top: 2px;
-}
-
-.timeline-sidebar a {
+.sidebar-timeline a {
   text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  color: #333333;
 }
 
-.timeline-sidebar a:hover {
+.sidebar-timeline a:hover {
   color: #2a7ae2;
 }
 
-.project-content {
+.content-area {
   flex-grow: 1;
-  padding-left: 40px;
-}
-
-.project-section {
-  margin-bottom: 3em;
 }
 
 footer {
@@ -123,4 +104,8 @@ img {
   max-width: 100%;
   height: auto;
   margin: 1em 0;
+}
+
+.project-section {
+  margin-bottom: 3em;
 }
