--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body {
   margin: 0;
   background-color: #ffffff;
   color: #333333;
-  display: flex;
-  flex-direction: column;
 }
 
 nav {
@@ -31,49 +29,70 @@ nav a:hover {
   text-decoration: underline;
 }
 
-.main-content {
+.project-wrapper {
   display: flex;
-  max-width: 1200px;
-  margin: auto;
-  padding: 2em;
+  max-width: 1100px;
+  margin: 2em auto;
+  padding: 0 2em;
 }
 
-.sidebar-timeline {
-  width: 250px;
-  background-color: #f5f5f5;
-  padding: 1em;
-  margin-right: 2em;
-  border-right: 1px solid #e0e0e0;
+.timeline-sidebar {
+  width: 160px;
   position: sticky;
-  top: 80px;
-  height: fit-content;
+  top: 100px;
+  padding-right: 20px;
 }
 
-.sidebar-timeline h3 {
-  margin-top: 0;
-}
-
-.sidebar-timeline ul {
-  list-style-type: none;
+.timeline-sidebar ul {
+  list-style: none;
   padding: 0;
   margin: 0;
+  position: relative;
 }
 
-.sidebar-timeline li {
-  margin-bottom: 1em;
+.timeline-sidebar ul::before {
+  content: '';
+  position: absolute;
+  left: 16px;
+  top: 0;
+  width: 4px;
+  height: 100%;
+  background: #e0e0e0;
 }
 
-.sidebar-timeline a {
+.timeline-sidebar li {
+  position: relative;
+  margin-bottom: 40px;
+  padding-left: 40px;
+}
+
+.timeline-sidebar .dot {
+  width: 12px;
+  height: 12px;
+  background-color: #2a7ae2;
+  border-radius: 50%;
+  position: absolute;
+  left: 10px;
+  top: 2px;
+}
+
+.timeline-sidebar a {
   text-decoration: none;
-  color: #333333;
+  color: #333;
+  font-weight: bold;
 }
 
-.sidebar-timeline a:hover {
+.timeline-sidebar a:hover {
   color: #2a7ae2;
 }
 
-.content-area {
+.project-content {
   flex-grow: 1;
+  padding-left: 40px;
+}
+
+.project-section {
+  margin-bottom: 3em;
 }
 
 footer {
@@ -104,8 +123,4 @@ img {
   max-width: 100%;
   height: auto;
   margin: 1em 0;
-}
-
-.project-section {
-  margin-bottom: 3em;
 }
