--- a/style.css
+++ b/style.css
@@ -29,11 +29,65 @@ nav a:hover {
   text-decoration: underline;
 }
 
+.container {
+  padding: 2em;
+  max-width: 900px;
+  margin: auto;
+}
+
+footer {
+  text-align: center;
+  color: #828282;
+  padding: 2em;
+}
+
+blockquote {
+  border-left: 4px solid #dfe2e5;
+  margin: 1em 0;
+  padding-left: 1em;
+  color: #828282;
+}
+
+code {
+  background-color: #f7f7f7;
+  padding: 2px 4px;
+  font-family: monospace;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-color: #e0e0e0;
+  margin: 2em 0;
+}
+
+.sidebar {
+  background-color: #f5f5f5;
+  padding: 1em;
+  margin-top: 2em;
+}
+
+.sidebar a:hover {
+  color: #2a7ae2;
+}
+
+iframe {
+  width: 100%;
+  height: 600px;
+  border: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin: 1em 0;
+}
+
 .project-wrapper {
   display: flex;
-  max-width: 1100px;
-  margin: 2em auto;
-  padding: 0 2em;
+  max-width: 1200px;
+  margin: auto;
+  padding: 2em;
 }
 
 .timeline-sidebar {
@@ -95,32 +149,3 @@ nav a:hover {
   margin-bottom: 3em;
 }
 
-footer {
-  text-align: center;
-  color: #828282;
-  background-color: #f5f5f5;
-  padding: 2em;
-  font-size: 0.9em;
-  border-top: 1px solid #e0e0e0;
-}
-
-footer a {
-  color: #2a7ae2;
-  text-decoration: none;
-}
-
-footer a:hover {
-  text-decoration: underline;
-}
-
-iframe {
-  width: 100%;
-  height: 600px;
-  border: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-  margin: 1em 0;
-}
