--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   background-color: #ffffff;
   color: #333333;
+  display: flex;
+  flex-direction: column;
 }
 
 nav {
@@ -29,46 +31,67 @@ nav a:hover {
   text-decoration: underline;
 }
 
-.container {
-  padding: 2em;
-  max-width: 900px;
+.main-content {
+  display: flex;
+  max-width: 1200px;
   margin: auto;
+  padding: 2em;
+}
+
+.sidebar-timeline {
+  width: 250px;
+  background-color: #f5f5f5;
+  padding: 1em;
+  margin-right: 2em;
+  border-right: 1px solid #e0e0e0;
+  position: sticky;
+  top: 80px;
+  height: fit-content;
+}
+
+.sidebar-timeline h3 {
+  margin-top: 0;
+}
+
+.sidebar-timeline ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar-timeline li {
+  margin-bottom: 1em;
+}
+
+.sidebar-timeline a {
+  text-decoration: none;
+  color: #333333;
+}
+
+.sidebar-timeline a:hover {
+  color: #2a7ae2;
+}
+
+.content-area {
+  flex-grow: 1;
 }
 
 footer {
   text-align: center;
   color: #828282;
-  padding: 2em;
-}
-
-blockquote {
-  border-left: 4px solid #dfe2e5;
-  margin: 1em 0;
-  padding-left: 1em;
-  color: #828282;
-}
-
-code {
-  background-color: #f7f7f7;
-  padding: 2px 4px;
-  font-family: monospace;
-}
-
-hr {
-  border: 0;
-  height: 1px;
-  background-color: #e0e0e0;
-  margin: 2em 0;
-}
-
-.sidebar {
   background-color: #f5f5f5;
-  padding: 1em;
-  margin-top: 2em;
+  padding: 2em;
+  font-size: 0.9em;
+  border-top: 1px solid #e0e0e0;
 }
 
-.sidebar a:hover {
+footer a {
   color: #2a7ae2;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 iframe {
@@ -81,6 +104,10 @@ img {
   max-width: 100%;
   height: auto;
   margin: 1em 0;
+}
+
+.project-section {
+  margin-bottom: 3em;
 }
 
 .project-wrapper {
@@ -148,4 +175,3 @@ img {
 .project-section {
   margin-bottom: 3em;
 }
-
