--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   color: #333333;
 }
 
+.container {
+  padding: 2em 1.5em;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
 nav {
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
