--- a/style.css
+++ b/style.css
@@ -45,14 +45,13 @@ nav a:hover {
   display: flex;
   max-width: 1100px;
   margin: 2em auto;
-  padding: 0 2em;
+  padding: 0 1.5em;
 }
 
 .timeline-sidebar {
-  width: 160px;
-  position: sticky;
-  top: 100px;
-  padding-right: 20px;
+  width: 140px;
+  padding-right: 16px;
+  margin-left: -10px;  /* shift sidebar left */
 }
 
 .timeline-sidebar ul {
