--- a/style.css
+++ b/style.css
@@ -7,12 +7,6 @@ body {
   color: #333333;
 }
 
-.container {
-  padding: 2em 1.5em;
-  max-width: 900px;
-  margin: 0 auto;
-}
-
 nav {
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
@@ -36,9 +30,9 @@ nav a:hover {
 }
 
 .container {
-  padding: 2em;
-  max-width: 1100px;
-  margin: auto;
+  padding: 2em 1.5em;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 .project-wrapper {
@@ -70,10 +64,34 @@ nav a:hover {
   list-style: none;
   padding: 0;
   margin: 1em 0 0;
+  position: relative;
+}
+
+.timeline-sidebar ul::before {
+  content: '';
+  position: absolute;
+  left: 10px;
+  top: 0;
+  width: 2px;
+  height: 100%;
+  background: #e0e0e0;
 }
 
 .timeline-sidebar li {
   margin-bottom: 0.75em;
+  position: relative;
+  padding-left: 20px;
+}
+
+.timeline-sidebar .dot {
+  width: 10px;
+  height: 10px;
+  background-color: #2a7ae2;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 4px;
 }
 
 .timeline-sidebar a {
@@ -124,14 +142,4 @@ img {
   max-width: 100%;
   height: auto;
   margin: 1em 0;
-}
-
-.timeline-sidebar ul::before {
-  content: '';
-  position: absolute;
-  left: 10px;
-  top: 0;
-  width: 2px;
-  height: 100%;
-  background: #e0e0e0;
 }
