--- a/style.css
+++ b/style.css
@@ -43,34 +43,37 @@ nav a:hover {
 }
 
 .timeline-sidebar {
-  width: 180px;
+  width: 200px;
   padding: 1.5em;
   background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
   position: sticky;
   top: 100px;
-  margin-left: -10px;
   margin-right: 30px;
+}
+
+.timeline-sidebar h3 {
+  margin-top: 0;
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
 .timeline-sidebar ul {
   list-style: none;
   padding: 0;
   margin: 1em 0 0;
-  position: relative;
 }
 
 .timeline-sidebar li {
   margin-bottom: 0.75em;
-  position: relative;
-  padding-left: 20px;
 }
 
 .timeline-sidebar a {
   text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  color: #333333;
+  font-size: 0.95em;
+  transition: color 0.2s ease;
 }
 
 .timeline-sidebar a:hover {
